# pyxelmpc

./: App.tsx  app.json  package-lock.json  package.json  styles.ts
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/java/com/pyxelmpc/: ReactNativeFlipper.java
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/PyxelMPC/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/PyxelMPC.xcodeproj/: project.pbxproj
ios/PyxelMPC.xcodeproj/xcshareddata/xcschemes/: PyxelMPC.xcscheme
ios/PyxelMPC.xcworkspace/: contents.xcworkspacedata
ios/PyxelMPCModule/: PyxelRustModule.swift  mpc-event-emitter.h  mpc-event-emitter.m  mpc-module.h  mpc-module.m
ios/PyxelMPCTests/: PyxelMPCTests.m
ios/PyxelRustModule/: libpyxel_rust_module.dylib  pyxel-event-emitter.h  pyxel-event-emitter.m  pyxel-rust-module.h  pyxel-rust-module.m
rust/: Cargo.toml  README.md
rust/crates/px-mpc-module/: Cargo.toml  README.md
rust/crates/px-mpc-module/src/: gg20_sm_client.rs  lib.rs
rust/crates/px-mpc-protocol/: Cargo.toml  README.md
rust/crates/px-mpc-protocol/examples/: Readme.md  gg20_keygen.rs  gg20_offline.rs  gg20_siggen.rs  gg20_signing.rs  gg20_sm_client.rs
rust/crates/px-mpc-protocol/src/gg20/state_machine/: keygen.rs  sign.rs
rust/crates/px-mpc-pubsub/: Cargo.toml
rust/crates/px-mpc-pubsub/examples/: server.rs
rust/crates/px-mpc-pubsub/src/: main.rs
rust/crates/px-round-based/: Cargo.toml
rust/crates/px-round-based/src/: lib.rs
rust/crates/px-round-based/src/async_runtime/: mod.rs
rust/crates/px-round-based/tests/: simulate_silly_protocol.rs
rust/crates/px-round-based/tests/silly_protocol/: mod.rs  rounds.rs
rust/scripts/: main-test.cjs
src/: rustModule.js
src/api/: constants.ts  index.ts  requests.ts  subscriber.ts
src/modules/: MPCModule.ts
(+6 files in other folders)
