[package]
name = "px-mpc-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["curv-kzen/num-bigint"]
cclst = ["class_group"]

[dependencies]
px-round-based = { path = "../px-round-based" }
px-mpc-protocol = { path = "../px-mpc-protocol"}

subtle = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
zeroize = { version = "1", default-features = false }
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
thiserror = { version = "1.0.23", default-features = false }
derivative = { version = "2", default-features = false }
sha2 = { version = "0.9", default-features = false}
libc = "0.2"
futures = "0.3"
anyhow = "1"
structopt = "0.3"
tokio = "1"
serde_json = "1.0"
surf = "2"
async-sse = "5.1.0"

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.6"
default-features = false
optional = true

[dev-dependencies]
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
surf = "2"
async-sse = "5"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}
px-round-based = { path = "../px-round-based", features = ["dev"]}
px-mpc-protocol = { path = "../px-mpc-protocol"}
